--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <meta name="keyword" content="red, color, colors">
     <meta name="description" content="the beast color in the word">
-    <link rel="stylesheet" href="Style/style.css">
-    <link rel="icon"href="Icon/Logo.ico">
+    <link rel="stylesheet" href="./component/style/Style.css">
+    <link rel="icon"href="./asset/icon/logoRed.svg">
     <script defer src="JavaScript/Logic.js" type=""></script></scriptd>
     <title>W-CV</title>
 </head>
 <body>
     <header>
-        <a href="#home" id="logo">
-            <img src="Photo/Logo.png" alt="logo" id="logo-icon">
+        <a href="#home" style="gap: 10px;" id="logo">
+            <img src="./asset/icon/logoBlack.svg" style="height: 6vh;" alt="logo" id="logo-icon">
             <span class="logo-wriht">W-CV</span> 
         </a>
         <nav class="menu">
@@ -24,18 +24,18 @@
              <a href="#contact">Contact</a>
         </nav>
         <span>
-            <a href="HTML/CreateCV.html" class="btn-1">Créer un CV</a>
+            <a href="./component/html/CreateCV.html" class="btn-2">Créer un CV</a>
         </span>
     </header>
 
     <main>
-        <section id="home">
+        <section id="home" style="color: var(--blackcolor);">
             <div class="cercle"></div>
-            <div class="po">
+            <div class="po" >
                 <h3>La mailleur sollution pour</h3>
                 <h1>CREER UN CV PROFESSIONNEL</h1>
                 <p>En quelque minutes, telecharger votre CV sous form PDF gratuitement</p>
-                <a href="HTML/CreateCV.html" class="btn-2">Créer un CV</a>
+                <a href="./component/html/CreateCV.html" class="btn-2">Créer un CV</a>
                 <nav class="icon-social-media">
                     <a href="https://www.instagram.com/">
                         <i class="fa-brands fa-instagram"></i>
@@ -79,7 +79,9 @@
                 </div>
             </div>
         </section>
+
         <hr id="line">
+
         <section id="FAQ">
             <h1 class="title" >FAQ</h1>
             <div id="container-faq">
@@ -211,7 +213,7 @@
                         indiquer vos prétentions salariales : le CV n’est pas le lieu pour indiquer le salaire que vous visez. Vous aurez tout le temps d’aborder le sujet au moment de l’entretien d’embauche !</div>
                 </div>
             </div>
-            <a href="HTML/FAQ.html" class="btn-3">Une autre questions?</a>
+            <a href="./component/html/FAQ.html" class="btn-3">Une autre questions?</a>
         </section>
         <section id="contact">
             <h3 class="title" >Contact</h3>
